--- a/app/src/main/res/layout/content_nguoi_dung.xml
+++ b/app/src/main/res/layout/content_nguoi_dung.xml
@@ -8,4 +8,11 @@
     tools:context=".NguoiDungActivity.NguoiDungActivity"
     tools:showIn="@layout/app_bar_nguoi_dung">
 
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/vpNguoiDung">
+
+    </android.support.v4.view.ViewPager>
+
 </android.support.constraint.ConstraintLayout>
